--- a/root/index.html
+++ b/root/index.html
@@ -168,3 +168,4 @@
 </script>
 </body>
 </html>
+<textarea id="logBox" rows="10" cols="50" readonly style="width: 100%; margin-top: 1rem;"></textarea>
