--- a/root/index.html
+++ b/root/index.html
@@ -89,6 +89,7 @@
         
       </select>
       <button id="toggleDarkMode">🌙</button>
+      <button id="swipeToggleBtn" onclick="toggleSwipe()">Disable Swipe</button>
     </div>
   </div>
 
