--- a/root/index.html
+++ b/root/index.html
@@ -89,7 +89,7 @@
         
       </select>
       <button id="toggleDarkMode">🌙</button>
-      <button id="swipeToggleBtn" onclick="toggleSwipe()" style="font-size: 12px; padding: 4px 8px;">Disable Swipe</button>
+      <button id="swipeToggleBtn" onclick="toggleSwipe()">Swipe: ON</button>
     </div>
   </div>
 
