--- a/root/check_all_bible_text.html
+++ b/root/check_all_bible_text.html
@@ -12,12 +12,15 @@
     #results { margin-top:12px; line-height:1.5; white-space:pre-wrap; }
     details { margin:8px 0; }
     summary { cursor:pointer; }
+    /* diff colors */
+    .del { background:#ffeaea; color:#b00020; }
+    .add { background:#eaffea; color:#0b7a0b; }
+    .eq  { }
   </style>
 </head>
 <body>
   <h1>Whole-Bible KJV Checker</h1>
-  <p>Compares every <code>/bible/kjv/Book/NN.json</code> chapter against a reference KJV.</p>
-  <p class="muted">Legend: ✓ match, ✗ major diff (expand to see first difference)</p>
+  <p class="muted">Legend: ✓ match, ✗ diff (expand to see first difference). Red = differs in your text, Green = differs in reference.</p>
   <button id="run">Run full check</button>
   <div id="progress" class="muted" style="margin-top:8px;"></div>
   <div id="results"></div>
@@ -48,11 +51,19 @@
     const wait = ms => new Promise(r => setTimeout(r, ms));
 
     // ---------- Normalizers ----------
-    const stripHtml    = s => s.replace(/<[^>]+>/g,"");
-    const stripPilcrow = s => s.replace(/¶/g,"");
-    const stripBracket = s => s.replace(/\[[^\]]+\]/g,"");
-    const stripLeadNum = s => s.replace(/^\s*\(?\d+\)?[.:)]\s*/,"");
+    const stripHtml        = s => s.replace(/<[^>]+>/g,"");
+    const stripPilcrow     = s => s.replace(/¶/g,"");
+    const dropBracketChars = s => s.replace(/[\[\]\(\)\{\}«»‹›]/g, ""); // keep words, drop brackets
+    const stripLeadNum     = s => s.replace(/^\s*\(?\d+\)?[.:)]\s*/,"");
 
+    // collapse hyphens/spaces for compounds: Beth-shemesh == Bethshemesh; first born == firstborn
+    function collapseCompounds(s){
+      s = s.replace(/-/g,"");                 // remove hyphens entirely
+      s = s.replace(/\bfirst\s+born\b/g,"firstborn");
+      return s;
+    }
+
+    // Loose canonical form used for comparison
     function normalizeLoose(s){
       s = (s||"")
         .replace(/\u201c|\u201d/g,'"')
@@ -61,21 +72,73 @@
 
       s = stripHtml(s);
       s = stripPilcrow(s);
-      s = stripBracket(s);
+      s = dropBracketChars(s);  // keep inside text
       s = stripLeadNum(s);
 
-      // treat hyphens as optional, collapsing to one word (Beth-shemesh == Bethshemesh)
-      s = s.replace(/-/g, "");
+      s = collapseCompounds(s);
+      s = s.replace(/\bthroughly\b/g,"thoroughly"); // KJV variant
+      s = s.replace(/\b(\w+?)s\b/g,"$1");           // simple plurals
 
-      // smooth common spelling/plural quirks
-      s = s.replace(/\bthroughly\b/g,"thoroughly");
-      s = s.replace(/\b(\w+?)s\b/g,"$1");
-
-      // drop punctuation and collapse spaces
-      s = s.replace(/[^\w\s]/g," ");
+      s = s.replace(/[^\w\s]/g," "); // drop remaining punctuation
       s = s.replace(/\s+/g," ").trim();
-
       return s;
+    }
+
+    // Tokenize a verse into {orig, norm} tokens for highlighting
+    function tokenizeForDiff(s){
+      const rawTokens = (s||"").split(/\s+/);
+      const tokens = [];
+      for(const t of rawTokens){
+        const n = normalizeLoose(t);
+        if(n.length){
+          tokens.push({ orig:t, norm:n });
+        }else{
+          if(/[^\s]/.test(t)) tokens.push({ orig:t, norm:"" }); // preserve visible punct
+        }
+      }
+      return tokens;
+    }
+
+    // Longest Common Subsequence on normalized tokens
+    function lcs(a, b){
+      const m=a.length, n=b.length;
+      const dp = Array.from({length:m+1},()=>Array(n+1).fill(0));
+      for(let i=1;i<=m;i++){
+        for(let j=1;j<=n;j++){
+          if(a[i-1].norm && a[i-1].norm === b[j-1].norm) dp[i][j]=dp[i-1][j-1]+1;
+          else dp[i][j]=Math.max(dp[i-1][j],dp[i][j-1]);
+        }
+      }
+      const matches=[];
+      let i=m, j=n;
+      while(i>0 && j>0){
+        if(a[i-1].norm && a[i-1].norm === b[j-1].norm){ matches.push([i-1,j-1]); i--; j--; }
+        else if(dp[i-1][j] >= dp[i][j-1]) i--;
+        else j--;
+      }
+      return matches.reverse();
+    }
+
+    // Build HTML with spans: words in A not matched -> .del; in B not matched -> .add
+    function renderDiffHTML(localStr, refStr){
+      const A = tokenizeForDiff(localStr);
+      const B = tokenizeForDiff(refStr);
+      const matches = lcs(A,B);
+
+      const aMatchIdx = new Set(matches.map(([ai]) => ai));
+      const bMatchIdx = new Set(matches.map(([,bi]) => bi));
+
+      const aHtml = A.map((tok, idx) => {
+        if(!tok.norm) return tok.orig;
+        return aMatchIdx.has(idx) ? tok.orig : `<span class="del">${tok.orig}</span>`;
+      }).join(" ");
+
+      const bHtml = B.map((tok, idx) => {
+        if(!tok.norm) return tok.orig;
+        return bMatchIdx.has(idx) ? tok.orig : `<span class="add">${tok.orig}</span>`;
+      }).join(" ");
+
+      return { aHtml, bHtml };
     }
 
     function firstDiff(localArr, refArr){
@@ -131,12 +194,13 @@
         if(!r.ok) throw new Error(`REF ${label} ${book} ${ch} HTTP ${r.status} (try ${attempt})`);
         let js;
         try { js = await r.json(); }
-        catch { throw new Error(`REF ${label} ${book} ${ch} JSON parse (try ${attempt})`); }
+        catch { throw new Error(`REF ${label} ${book} ${ch} parse (try ${attempt})`); }
         const verses = Array.isArray(js.verses) ? js.verses : [];
         if(!verses.length) throw new Error(`REF ${label} ${book} ${ch} empty (try ${attempt})`);
         return verses.map(v => v.text ?? "");
       }
 
+      // up to 4 attempts: 2 direct, then 2 via proxy; if all fail, skip gracefully
       for(let attempt=1; attempt<=4; attempt++){
         try{
           if(attempt <= 2){
@@ -145,7 +209,7 @@
             return await tryUrl(proxy,  "PROXY",  attempt);
           }
         }catch(e){
-          if(attempt === 4) throw e;
+          if(attempt === 4) return null; // graceful skip for this chapter
           await wait(800 + Math.random()*700);
         }
       }
@@ -154,7 +218,7 @@
     // ---------- Runner ----------
     async function run(){
       resultsDiv.textContent = "";
-      let total=0, ok=0, bad=0, missing=0, errs=0;
+      let total=0, ok=0, bad=0, missing=0, errs=0, skipped=0;
 
       for(const [book,maxCh] of BOOKS){
         const head = document.createElement("div");
@@ -168,24 +232,37 @@
             const local = await fetchLocalChapter(book, ch);
             const ref   = await fetchRefChapter(book, ch);
 
-            const diff = firstDiff(local, ref);
-            const line = document.createElement("div");
+            if(!ref){
+              skipped++;
+              const line = document.createElement("div");
+              line.className = "muted";
+              line.textContent = `• ${book} ${ch} -- skipped (reference unavailable)`;
+              resultsDiv.appendChild(line);
+            } else {
+              const diff = firstDiff(local, ref);
+              const line = document.createElement("div");
 
-            if(!diff){
-              ok++;
-              line.className = "ok";
-              line.textContent = `✓ ${book} ${ch}`;
-            }else{
-              bad++;
-              line.className = "bad";
-              const det = document.createElement("details");
-              const sum = document.createElement("summary");
-              sum.textContent = `✗ ${book} ${ch} (first diff v${diff.v})`;
-              const body = document.createElement("div");
-              body.innerHTML = `<div><em>Local:</em> ${diff.local}</div><div><em>Ref:</em> ${diff.ref}</div>`;
-              det.appendChild(sum); det.appendChild(body); line.appendChild(det);
+              if(!diff){
+                ok++;
+                line.className = "ok";
+                line.textContent = `✓ ${book} ${ch}`;
+              }else{
+                bad++;
+                line.className = "bad";
+
+                const { aHtml, bHtml } = renderDiffHTML(diff.local, diff.ref);
+
+                const det = document.createElement("details");
+                const sum = document.createElement("summary");
+                sum.textContent = `✗ ${book} ${ch} (first diff v${diff.v})`;
+
+                const body = document.createElement("div");
+                body.innerHTML = `<div><em>Local:</em> ${aHtml}</div><div><em>Ref:</em> ${bHtml}</div>`;
+
+                det.appendChild(sum); det.appendChild(body); line.appendChild(det);
+              }
+              resultsDiv.appendChild(line);
             }
-            resultsDiv.appendChild(line);
           }catch(e){
             errs++;
             if(String(e).includes("LOCAL")) missing++;
@@ -198,7 +275,7 @@
           await wait(500 + Math.random()*200);
         }
       }
-      progress(`Done. Total: ${total} | ✓ ${ok} | ✗ ${bad} | Missing: ${missing} | Errors: ${errs}`);
+      progress(`Done. Total: ${total} | ✓ ${ok} | ✗ ${bad} | Skipped(ref): ${skipped} | Missing(local): ${missing} | Errors: ${errs}`);
     }
 
     document.getElementById("run").addEventListener("click", run);
